--- a/frontend.html
+++ b/frontend.html
@@ -4,20 +4,32 @@
 <head>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet">
-    <style>
-        * {
-            font-family: 'Fira Code', monospace;
-        }
-    </style>
+    <link href="./main.css" rel="stylesheet">
     <script>
         var ip = 'http://127.0.0.1:7486'
         const http = new XMLHttpRequest();
+        var pgp = false;
+        function togglePGP() {
+            if (document.getElementById('pgp').checked) {
+                document.getElementById('public-key').style.display = 'inline';
+            }
+            else {
+                document.getElementById('public-key').style.display = 'none';
+            }
+        }
         function sendpost() {
-            http.open("POST", `${ip}/post/?${btoa(document.getElementById('post').value)}`);
+            http.open("POST", `${ip}/post?${btoa(document.getElementById('post').value)}`);
             http.send();
         }
         function getpost() {
-
+            let post = "";
+            http.open("POST", `${ip}/get?${btoa(post)}`);
+            http.send();
+        }
+        function getrandompost() {
+            let post = "";
+            http.open("POST", `${ip}/get?${btoa(random)}`);
+            http.send();
         }
         http.onreadystatechange = (e) => {
             document.getElementById('response').value = http.responseText;
@@ -25,15 +37,31 @@
     </script>
 </head>
 
-<body>
+<body class="darkmode">
     <center>
         <h3>v1.4</h3>
+        <div id="options" style="position: absolute; top: 3.5vh; left: 0vh;">
+            <label style="background-color: darkblue;">
+                <p style="transform: rotate(-0.125turn);">
+                    <input type="checkbox" id="darkmode" onchange="toggleDark()" checked>
+                    Dark mode
+                </p>
+            </label>
+        </div>
         <textarea id='post' type="text" style="height: 10vh; width: 50vw; text-align: left; resize: none;"
             placeholder=" Type a post here..."></textarea>
         <div id="buttons">
-            <input type="text" id="username" style="width: auto;" placeholder="Username">
-            <button onclick="sendpost()">Post</button>
-            <button onclick="getpost()">Get</button>
+            <button onclick="sendpost()">Post As</button>
+            <input type="text" id="username" style="width: auto; font-family: monospace;" placeholder="Username">
+            <button onclick="getpost()">debug: Get Post</button>
+            <label>
+                Verify
+                <input type="checkbox" id="pgp" onchange="togglePGP()">
+                <input type="text" id="public-key" placeholder="PGP signature..." style="
+                    font-family: monospace; 
+                    display: none;">
+            </label>
+
         </div>
         <input disabled id='response' type="text" style="height: 25vh; width: 50vw;" onload="getrandompost()">
     </center>
