--- a/frontend/frontend.html
+++ b/frontend/frontend.html
@@ -37,15 +37,14 @@
 
         </div>
         <div style="height: 25vh; width: 50vw; padding: 0px;">
-            <input disabled id='response' type="text"
-                style="width: 100%; height:20vh; margin-right: 0px; box-sizing: border-box;" onload="getrandompost()">
+            <input disabled id='response' type="text" style="width: 100%; height:20vh; margin-right: 0px;"
+                onload="getrandompost()">
             <button style="float: left;">left</button>
-            <button style="float: right; box-sizing: border-box;">right</button>
+            <button style="float: right;">right</button>
         </div>
     </center>
 </body>
+<script src="./res/third-party/openpgp.min.js"></script>
 <script src="./res/frontend.js"></script>
-<script src="./res/crypt.js">
-</script>
 
 </html>
